<?xml version="1.0"?>
<!-- 
  *
  * (c) Copyright 2015-2016 River Systems, all rights reserved.
  *
  * This is proprietary software, unauthorized distribution is not permitted.
  *
-->

<package>
    <name>srslib_framework</name>
    <version>1.0.0</version>
    <description>Library package: Framework</description>
    
    <author email="fsantini@6river.com">Fabrizio Santini</author>
    <maintainer email="fsantini@6river.com">Fabrizio Santini</maintainer>

    <license>Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>

    <build_depend>nav_msgs</build_depend>
    <run_depend>nav_msgs</run_depend>

    <build_depend>srslib_test</build_depend>
    <run_depend>srslib_test</run_depend>

    <build_depend>costmap_2d</build_depend>
    <run_depend>costmap_2d</run_depend>

</package>
